--- a/.editorconfig
+++ b/.editorconfig
@@ -2,3 +2,15 @@
 
 # Default severity for all analyzer diagnostics
 dotnet_analyzer_diagnostic.severity = warning
+
+# IDE0130: Namespace does not match folder structure
+dotnet_diagnostic.IDE0130.severity = none
+
+# CS1591: Missing XML comment for publicly visible type or member
+dotnet_diagnostic.CS1591.severity = none
+
+# CA1051: Do not declare visible instance fields
+dotnet_diagnostic.CA1051.severity = none
+
+# IDE0011: Add braces
+dotnet_diagnostic.IDE0011.severity = none
