--- a/VoxxWeatherPlugin/VoxxWeatherPlugin.csproj
+++ b/VoxxWeatherPlugin/VoxxWeatherPlugin.csproj
@@ -23,14 +23,6 @@
         <AnalysisLevel>preview-recommended</AnalysisLevel>
     </PropertyGroup>
 
-    <!-- Disable certain warnings. -->
-    <PropertyGroup>
-        <NoWarn>$(NoWarn);CA1051</NoWarn>
-        <NoWarn>$(NoWarn);CS1591</NoWarn>
-        <NoWarn>$(NoWarn);IDE0011</NoWarn>
-        <NoWarn>$(NoWarn);IDE0130</NoWarn>
-    </PropertyGroup>
-
     <!-- Embedded debug. -->
     <PropertyGroup>
         <DebugSymbols>true</DebugSymbols>
@@ -44,12 +36,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Unity.Analyzers" Version="1.22.0">
+        <PackageReference Include="Microsoft.Unity.Analyzers" Version="1.*">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
         </PackageReference>
         <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
-        <PackageReference Include="BepInEx.AssemblyPublicizer.MSBuild" Version="0.4.2" PrivateAssets="all" />
+        <PackageReference Include="BepInEx.AssemblyPublicizer.MSBuild" Version="0.4.*" PrivateAssets="all" />
+        <PackageReference Include="BepInEx.BaseLib" Version="5.*" PrivateAssets="all" Publicize="true" />
         <PackageReference Include="BepInEx.Core" Version="5.*" PrivateAssets="all" />
         <PackageReference Include="BepInEx.PluginInfoProps" Version="1.*" PrivateAssets="all" />
         <PackageReference Include="UnityEngine.Modules" Version="2022.3.62" IncludeAssets="compile" PrivateAssets="all" />
