--- a/.editorconfig
+++ b/.editorconfig
@@ -14,3 +14,6 @@ dotnet_diagnostic.CA1051.severity = none
 
 # IDE0011: Add braces
 dotnet_diagnostic.IDE0011.severity = none
+
+# IDE0022: Use block body for method
+dotnet_diagnostic.IDE0022.severity = none
